# prometheus

./: .gitignore  README.md  pyproject.toml
examples/: cw_pe.ipynb  gwb_pe.ipynb
examples/advanced_modeling/: distinct_psr_models.ipynb  harmonic_analysis.ipynb  targeted_search.ipynb
src/: README.md
src/prometheus/: FFTInt.py  __init__.py  data.py  deterministic.py  deterministic_models.py  posterior.py  pta_model.py  spectra.py  spectral_models.py  utilities.py
tests/: CW_float32.ipynb
tests/CW_float32/: compare_float32.ipynb  run_float64.ipynb
