[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus"
version = "0.1.1"
description = "A fast pulsar timing array analysis software."
dependencies = [
    "scipy",
    "numpy",
    "pandas",
    "pyarrow",
    "tqdm",
    "enterprise-pulsar",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
